--- a/server/resources/agentsDiff.css
+++ b/server/resources/agentsDiff.css
@@ -18,10 +18,11 @@
   margin: 1em 0 0 0;
 }
 
+/*
 .parameter_diff {
   background-color: greenyellow;
 }
 
 .value_diff {
   background-color: lightgray;
-}
+}*/
